--- a/vipers/Cargo.toml
+++ b/vipers/Cargo.toml
@@ -15,10 +15,10 @@ default = []
 ata = ["spl-associated-token-account"]
 
 [dependencies]
-anchor-lang = ">=0.22, <=0.25"
-anchor-spl = ">=0.22, <=0.25"
+anchor-lang = ">=0.22"
+anchor-spl = ">=0.22"
 num-traits = "^0.2.14"
-spl-associated-token-account = { version = "^1.0.3", features = [
+spl-associated-token-account = { version = "^1.1.2", features = [
     "no-entrypoint"
 ], optional = true }
 
